<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_elaborar_questao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        tools:ignore="PrivateResource">

        <RelativeLayout
            android:id="@+id/layout_de_fazer_questao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/card_elaborar_questao"
            app:layout_constraintEnd_toEndOf="@id/card_elaborar_questao"
            app:layout_constraintStart_toStartOf="@id/card_elaborar_questao"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/Pergunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:hint="@string/Pergunta"
                android:inputType="textMultiLine"
                tools:targetApi="o" />

            <CheckBox
                android:id="@+id/Opção_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Pergunta"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/Texto_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/Opção_a"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/Opção_a"
                android:layout_toRightOf="@id/Opção_a"
                android:autofillHints=""
                android:hint="@string/Opção_a"
                android:inputType="textMultiLine"
                tools:targetApi="o" />

            <CheckBox
                android:id="@+id/Opção_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Texto_a"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/Texto_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/Opção_b"
                android:layout_alignTop="@id/Opção_a"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/Opção_b"
                android:layout_toRightOf="@id/Opção_b"
                android:autofillHints=""
                android:hint="@string/Opção_b"
                android:inputType="textMultiLine"
                tools:targetApi="o" />

            <CheckBox
                android:id="@+id/Opção_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Texto_b"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/Texto_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/Opção_c"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/Opção_c"
                android:layout_toRightOf="@id/Opção_c"
                android:autofillHints=""
                android:hint="@string/Opção_c"
                android:inputType="textMultiLine"
                tools:targetApi="o" />

            <CheckBox
                android:id="@+id/Opção_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Texto_c"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/Texto_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/Opção_d"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/Opção_d"
                android:layout_toRightOf="@id/Opção_d"
                android:autofillHints=""
                android:hint="@string/Opção_d"
                android:inputType="textMultiLine"
                tools:targetApi="o" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>